Fixed: row gap for posts grid container is added

--- a/frontend/src/pages/profilePage/ProfilePage.module.css
+++ b/frontend/src/pages/profilePage/ProfilePage.module.css
@@ -57,6 +57,7 @@
 .user_posts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  row-gap: 16px;
 
   margin: 0 auto;
 
